--- a/Index.html
+++ b/Index.html
@@ -62,6 +62,31 @@
             </div>
         </section>
 
+
+        <section class="side-navbr">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 logo-a">
+                        <img src="images/abcLogo.png" alt="" width="100%">
+                    </div>
+                    <div class="col-4"></div>
+                    <div class="col-4 threeln">
+                        <div id="mySidenav" class="sidenav">
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <a href="#">About</a>
+                            <a href="#">Services</a>
+                            <a href="#">Clients</a>
+                            <a href="#">Contact</a>
+                        </div>
+                        <div id="main">
+                            <span onclick="openNav()">&#9776;</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
             <!-- Background image -->
 
         <section class="back-grnd">
@@ -185,8 +210,77 @@
             </div>
         </section>
 
+        <section class="work-hd-big">
+            <span class="work-span">
+                <p>HOW IT WORKS</p>
+                <h3>What Student Get From Here</h3>
+            </span>
+            <div class="container work">
+                <div class="row">
+                    <div class="col-12 col-md-3 col-lg-3 serve-head">
+                        <div class="serve">
+                            <i class="fa-brands fa-leanpub fa-beat"></i>
+                            <h6>Learning</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus recusandae magni dicta eligendi, doloribus quod reprehenderit molestiae cum, accusantium perspiciatis iste sint? Culpa minus odio repellat similique officia, dignissimos, laudantium quis, fugit distinctio saepe dolores?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3 col-lg-3 serve-head">
+                        <div class="serve">
+                            <i class="fa-solid fa-certificate"></i>
+                            <h6>Cretificates</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus recusandae magni dicta eligendi, doloribus quod reprehenderit molestiae cum, accusantium perspiciatis iste sint? Culpa minus odio repellat similique officia, dignissimos, laudantium quis, fugit distinctio saepe dolores?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3 col-lg-3 serve-head">
+                        <div class="serve">
+                            <i class="fa-solid fa-lock"></i>
+                            <h6>Private Monitoring</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus recusandae magni dicta eligendi, doloribus quod reprehenderit molestiae cum, accusantium perspiciatis iste sint? Culpa minus odio repellat similique officia, dignissimos, laudantium quis, fugit distinctio saepe dolores?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3 col-lg-3 serve-head">
+                        <div class="serve">
+                            <i class="fa-solid fa-lightbulb"></i>
+                            <h6>Building Creativity</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus recusandae magni dicta eligendi, doloribus quod reprehenderit molestiae cum, accusantium perspiciatis iste sint? Culpa minus odio repellat similique officia, dignissimos, laudantium quis, fugit distinctio saepe dolores?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <section class="gallery">
+            <div class="gall-row-a">
+                <img src="images/classroom.jpg" alt="">
+                <img src="images/auditorium.jpg" alt="">
+                <img src="images/comLab.jpg" alt="">
+            </div>
+            <div class="gall-row-b">
+                <img src="images/indoorgame.jpg" alt="">
+                <img src="images/library.jpg" alt="">
+            </div>
+            <div class="gall-row-c">
+                <img src="images/lab.jpg" alt="">
+                <img src="images/outdoorgame.jpg" alt="">
+                <img src="images/school.jpg" alt="">
+            </div>
+            <div class="gall-tag">
+                <h3>ABC PUBLIC SCHOOL GALLERY</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, numquam eos! Ipsa amet praesentium, earum ipsam cum expedita magnam eligendi vero repellendus. Odit autem labore laboriosam, ratione minus beatae doloremque.</p>
+                <button class="btnn">View All</button>
+            </div>
+        </section>
+
+        <section class="gallery-big">
             <div class="gall-row-a">
                 <img src="images/classroom.jpg" alt="">
                 <img src="images/auditorium.jpg" alt="">
@@ -224,10 +318,10 @@
             </div>
         </div>
         <div class="faculity-b">
-            <div>
-                <img class="img-a" src="images/power-cirlce-1.png" alt="">
-                <img class="img-b" src="images/banner_bg_left.png" alt="">
-                <img class="img-c" src="images/banner_bg_right.png" alt="">
+            <div class="fac-c">
+                <h3>Our Experienced Faculties</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam temporibus recusandae alias nemo perferendis nobis corrupti labore eos! Atque, neque unde nemo at modi quis quam fugiat temporibus incidunt illum?</p>
+                <button class="btn-b">View All Faculty Member</button>
             </div>
         </div>
     </section>
@@ -237,5 +331,16 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+        <script>
+            function openNav() {
+                document.getElementById("mySidenav").style.width = "250px";
+                document.getElementById("main").style.marginLeft = "250px";
+            }
+            
+            function closeNav() {
+                document.getElementById("mySidenav").style.width = "0";
+                document.getElementById("main").style.marginLeft= "0";
+            }
+            </script>
     </body>
 </html>
