--- a/Index.html
+++ b/Index.html
@@ -18,23 +18,18 @@
             <div class="container-fluid head-container">
                 <div class="row head-rw">
                     <div class="col-10 col-md-10 col-lg-10 head-cl">
-                        <div class="col-md-2 head-clm">
+                        <div class="col-4 col-md-2 head-clm">
                             <i class="fa-solid fa-envelope"></i>
                             <p>Get Contact</p>
                         </div>
-                        <div class="col-md-10 address-hide">
+                        <div class="col-8 col-md-10 address-hide">
                             <a href=""><i class="fa-sharp fa-solid fa-phone"></i> 9807654321</a>
                             <a href=""><i class="fa-regular fa-envelope"></i> abcpublicschool@outlook.com</a>
                             <a href=""><i class="fa-solid fa-location-dot"></i> Ranchi, Jharkhand</a>
                         </div>
                     </div>
                     <div class="col-2 col-md-2 col-lg-2 head-cl-b">
-                        <!-- <a href="">LOGIN</a>
-                        <hr style="border: 2px solid #ffff;">
-                        <a href="">REGISTER</a>
-                    </div> -->
-                    <div class="solid-ln"><a href="">LOGIN</a></div>
-                    <div class="registr"><a href="">REGISTER</a></div>
+                    <button class="login"><a href="LoginForm.html">LOGIN</a></button>
                 </div>
             </div>
         </section>
@@ -148,12 +143,12 @@
             <!--     MOTO   -->
         <section class="moto">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row moto-rw">
                     <div class="col-12 col-md-6 col-lg-6 moto-ln">
                         <p>ABC PUBLIC SCHOOL MOTO</p>
                         <h3>Limitless learning, more possibilities</h3>
                         <div class="line"></div>
-                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in, sint beatae ipsa iste quia minus rerum quod explicabo cupiditate soluta, veniam sunt perspiciatis unde odit sequi aspernatur totam id deleniti? Aspernatur tempore explicabo, mollitia hic facilis doloremque non vero, libero quidem, dicta perspiciatis quia ab beatae. Inventore, non. Quos eligendi animi explicabo ea vitae vero nostrum saepe cupiditate earum delectus nisi esse et recusandae facilis, praesentium neque error ex pariatur! Nisi minus explicabo natus eligendi quo totam eaque consequuntur, at non facere architecto id est doloribus placeat sequi eos, dolore numquam. Repellat tempora non impedit cum sequi sunt quam, officia labore veniam a obcaecati! Animi nostrum distinctio ullam nihil veniam magni, non numquam molestiae quibusdam! Suscipit excepturi corporis assumenda itaque vel autem deleniti laboriosam voluptates labore alias saepe eaque sunt hic qui incidunt velit non, unde omnis nulla nihil. Voluptates quas beatae quidem enim repellendus? Corrupti dolor mollitia reprehenderit?</span>
+                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in, sint beatae ipsa iste quia minus rerum quod explicabo cupiditate soluta, veniam sunt perspiciatis unde odit sequi aspernatur totam id deleniti? Aspernatur tempore explicabo, mollitia hic facilis doloremque non vero, libero quidem, dicta perspiciatis quia ab beatae. Inventore, non. Quos eligendi animi explicabo ea vitae vero nostrum saepe cupiditate earum delectus nisi esse et recusandae facilis, praesentium neque error ex pariatur! Nisi minus explicabo natus eligendi quo totam eaque consequuntur, at non facere architecto id est doloribus placeat sequi eos, dolore numquam.</span>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 moto-img">
                         <img src="images/schoolLogo.png" alt="">
@@ -286,7 +281,7 @@
                 <img src="images/auditorium.jpg" alt="">
                 <img src="images/comLab.jpg" alt="">
             </div>
-            <div class="gall-row-b">
+            <div class="gall-row-b-big">
                 <img src="images/indoorgame.jpg" alt="">
                 <img src="images/library.jpg" alt="">
             </div>
@@ -295,7 +290,7 @@
                 <img src="images/outdoorgame.jpg" alt="">
                 <img src="images/school.jpg" alt="">
             </div>
-            <div class="gall-tag">
+            <div class="gall-tag-big">
                 <h3>ABC PUBLIC SCHOOL GALLERY</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, numquam eos! Ipsa amet praesentium, earum ipsam cum expedita magnam eligendi vero repellendus. Odit autem labore laboriosam, ratione minus beatae doloremque.</p>
                 <button class="btnn">View All</button>
